# q1729

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  requirements-gpu.txt  requirements.txt
.claude/: settings.json
.github/ISSUE_TEMPLATE/: benchmark_submission.yml
.github/workflows/: ci.yml  release.yml
analysis/: __init__.py  narrator.py
assets/architecture/: README.md  pipeline-dark.config.json  pipeline-light.config.json  pipeline.mmd
assets/brand/: README.md  build_banner.py
benchmarks/: README.md
classical/: __init__.py  ramanujan_series.py
data/: sample_run.json
docs/: nvidia-access.md  onboarding.md  roadmap.md  sessions.md  setup.md
docs/adr/: 001-cuda-q-over-pennylane.md  002-wsl2-runtime.md  003-hybrid-cloud-nim.md  004-repo-hygiene-and-agent-sync.md  README.md
quantum/: __init__.py  backend.py
tests/integration/: test_cudaq_smoke.py  test_nim_live.py
tests/unit/: test_backend.py  test_main.py  test_narrator.py  test_ramanujan_series.py
